# Arcade-Dancing-System

./: .gitattributes  .gitignore  .gitmessage  LICENSE  README.md  code-format.sh  docs-format.sh  docs-generate.sh  pyproject.toml  realtime.py
.github/: CODEOWNERS  SECURITY.md
data/: .gitignore  sample-instructor_mediapipe_angle.json
ddrev/: __init__.py  __meta__.py  playback.py  realtime.py  recorder.py
docs/: .buildinfo  ddrev-poses-mediapipe-1.py  ddrev-poses-mediapipe-2.py  ddrev-poses-mediapipe-3.py  ddrev-utils-feedback_utils-1.py  ddrev-utils-feedback_utils-2.py  ddrev-utils-feedback_utils-3.py  ddrev.cli.arcade_dance.html  ddrev.cli.html  ddrev.cli.video2landmarks.html  ddrev.evaluation.html  ddrev.evaluations.angle.html  ddrev.evaluations.distance.html  ddrev.evaluations.html  ddrev.html  ddrev.playback.html  ddrev.pose.html  ddrev.pose.mediapipe.html  ddrev.poses.base.html  ddrev.poses.html  ddrev.poses.mediapipe.html  ddrev.realtime.html  ddrev.recorder.html  ddrev.utils.feedback_utils.html  ddrev.utils.generic_utils.html  ddrev.utils.html  ddrev.utils.json_utils.html  ddrev.utils.score_utils.html  ddrev.utils.video_utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
notebook/: MediaPipe-Pose.ipynb  README.md
src/: Makefile  conf.py  ddrev.cli.arcade_dance.rst  ddrev.evaluation.rst  ddrev.evaluations.angle.rst  ddrev.pose.mediapipe.rst  ddrev.pose.rst  ddrev.poses.rst  ddrev.recorder.rst  ddrev.rst  ddrev.utils.feedback_utils.rst  ddrev.utils.rst  ddrev.utils.score_utils.rst  index.rst  (+1 more)
(+76 files in other folders)
