[tool.poetry]
name = "arcade-dancing-system"
version = "0.1.0"
description = "A Novel Arcade dancing System."
authors = ["akari-doichan", "iwasakishuto <cabernet.rock@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mediapipe = "^0.8.6"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
