[tool.poetry]
name = "Arcade-Dancing-System"
version = "0.1.0"
description = "A Novel Arcade dancing System."
authors = ["akari-doichan", "iwasakishuto <cabernet.rock@gmail.com>"]
license = "MIT"
packages = [
    {include = "ddrev"}
]

[tool.poetry.dependencies]
python = "^3.8"
mediapipe = "^0.8.6"
numpy = "^1.21.0"
pydub = "^0.25.1"
tqdm = "^4.61.1"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.5"
flake8 = "^3.9.2"
isort = "^5.9.1"
black = "^21.6b0"
Sphinx = "^4.0.2"
sphinxext-opengraph = "^0.4.2"
sphinx-rtd-theme = "^0.5.2"
sphinx-theme = "^1.0"

[tool.poetry.scripts]
video2landmarks = "ddrev.cli.video2landmarks:video2landmarks"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
